Refactor URL handling in McpClient to use URI.create for service URLs